k8s/api-node/node.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-node-deploy
  labels:
    app: api-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-node
  template:
    metadata:
      labels:
        app: api-node
    spec:
      containers:
      - name: api-node
        image: bosukeme/api-node-k8s:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "1000m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
          protocol: TCP 
        readinessProbe:
          httpGet:
            path: /ping
            port: 3000
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
