k8s/api-node/node.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node-svc
  labels:
    app: api-node
spec:
  selector:
    app: api-node
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
